[package]
name = "rusty-pass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive", "wrap_help"] }
sqlite = { version = "0.30.3"}
home = "0.5.4"
rand = "0.8.5"
