[package]
name = "rusty-pass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive", "wrap_help"] }
home = "0.5.4"
rand = "0.8.5"
rusqlite = { version = "0.28.0", features = ["bundled"] }
edit = "0.1.4"
magic-crypt = "3.1.12"
rpassword = "7.2"
sha256 = "1.1.1"
